@@ -1320,6 +1320,7 @@ static std::string utf2df(std::string s) { return UTF2DF(s); }
 static std::string df2console(color_ostream &out, std::string s) { return DF2CONSOLE(out, s); }
 static std::string toSearchNormalized(std::string s) { return to_search_normalized(s); }
 static std::string capitalizeStringWords(std::string s) { return capitalize_string_words(s); }
+static bool matchPrefix(std::string prefix, std::string key) { return prefix_matches(prefix, key); }
 
 #define WRAP_VERSION_FUNC(name, function) WRAPN(name, DFHack::Version::function)
 
@@ -1340,6 +1341,7 @@ static const LuaWrapper::FunctionReg dfhack_module[] = {
     WRAP(df2console),
     WRAP(toSearchNormalized),
     WRAP(capitalizeStringWords),
+    WRAP(matchPrefix),
     WRAP_VERSION_FUNC(getDFHackVersion, dfhack_version),
     WRAP_VERSION_FUNC(getDFHackRelease, dfhack_release),
     WRAP_VERSION_FUNC(getDFHackBuildID, dfhack_build_id),
